# x-nes

./: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  apu-rom.md  architecture.md  building.md  bus.md  cpu.md  debugging.md  graphics-debugging.md  introduction.md  mapper-mmc5.md  mappers.md  opcodes.md  performance.md  portability.md  ppu.md
examples/: debug.rs  dual.rs  main.rs  netplay.rs  romdump.rs  tracew.rs  window.rs
fpga/rtl/core/: cpu_rp2a03.sv
src/: address.rs  apu.rs  bus.rs  clock.rs  controller.rs  cpu.rs  debug.rs  ffi.rs  gamepad.rs  interrupt.rs  lib.rs  mapper.rs  ops.rs  ppu.rs  rom.rs  util.rs
src/apu/: dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/mapper/: axrom.rs  cnrom.rs  common.rs  gxrom.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  mod.rs  nrom.rs  uxrom.rs
src/mapper/bandai/: bandai_74161_7432.rs  fcg.rs  karaoke.rs  mod.rs
src/mapper/camerica/: bf9096.rs  bf909x.rs  mod.rs
src/mapper/irem/: g101.rs  h3001.rs  lrog017.rs  mod.rs  tam_s1.rs
src/mapper/jaleco/: jf11_14.rs  jf13.rs  jf16.rs  jf17_19.rs  mod.rs  ss88006.rs
src/mapper/konami/: mod.rs  vrc1.rs  vrc2_4.rs  vrc3.rs  vrc6.rs  vrc7.rs
src/mapper/namco/: mod.rs  namco108.rs  namco163.rs
src/mapper/nintendo/: axrom.rs  cnrom.rs  cnrom_protect.rs  cp_rom.rs  gxrom.rs  mmc1.rs  mmc1_105.rs  mmc1_155.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  mod.rs  nrom.rs  tx_srom.rs  unrom_180.rs  unrom_94.rs  uxrom.rs
src/mapper/sunsoft/: fme7.rs  mod.rs  sunsoft184.rs  sunsoft3.rs  sunsoft4.rs  sunsoft89.rs  sunsoft93.rs
src/mapper/taito/: mod.rs  tc0190.rs  tc0690.rs  x1005.rs  x1017.rs
src/mapper/unlicensed/: color_dreams.rs  mapper103.rs  mapper106.rs  mapper107.rs  mapper112.rs  mapper116.rs  mapper117.rs  mapper120.rs  mapper15.rs  mapper170.rs  mapper174.rs  mapper200.rs  mapper202.rs  mapper203.rs  mapper204.rs  mapper212.rs  mapper213.rs  mapper214.rs  mapper216.rs  mapper221.rs  mapper222.rs  mapper225.rs  mapper226.rs  mapper227.rs  mapper229.rs  mapper230.rs  mapper231.rs  mapper233.rs  mapper234.rs  mapper240.rs  mapper241.rs  mapper242.rs  mapper244.rs  mapper246.rs  mapper253.rs  mapper35.rs  mapper40.rs  mapper42.rs  mapper43.rs  mapper50.rs  (+11 more)
src/ops/: arithmetic.rs  branch.rs  flag.rs  jump.rs  logic.rs  macros.rs  mod.rs  nop.rs  rmw.rs  sh.rs  shift.rs  stack.rs  transfer.rs  unofficial.rs
src/ppu/: bus.rs  mod.rs  registers.rs  registers_tmp.rs  render.rs
tests/: accuracy_coin.nes  accuracy_coin.rs  blargg_tests.rs  diagnostic_tests.rs  integration.rs
