[package]
name = "x-nes"
authors = ["Nguyễn Quý Ngọc"]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
repository = "https://github.com/ChaoswareHQ/x-nes"
license = "MIT"

[features]
default = ["std"]
std = []

[lib]
name = "nes"
crate-type = ["lib", "cdylib", "staticlib"]

[[example]]
name = "main"
path = "examples/main.rs"

[[example]]
name = "window"
path = "examples/window.rs"

[dev-dependencies]
softbuffer = "0.4.8"
winit = "0.30.13"
ureq = "3.3.0"
cpal = "0.18.1"
ringbuf = "0.5.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = "symbols"
panic          = "abort"