[package]
name = "x-nes"
authors = ["Nguyễn Quý Ngọc"]
version = "0.1.1"
edition = "2024"
rust-version = "1.97.0"
repository = "https://github.com/ChaoswareHQ/x-nes"
homepage = "https://github.com/ChaoswareHQ/x-nes"
documentation = "https://chaoswarehq.github.io/x-nes/"
license = "MIT OR Apache-2.0"
description = "A minimal NES emulator library written in Rust, targeting everything from microcontrollers to modern desktops."
readme = "README.md"
keywords = ["nes", "emulator", "no-std", "ffi", "embedded"]
categories = ["emulators", "embedded", "game-development", "api-bindings", "multimedia"]

exclude = [
    ".cargo/",
    ".github/",
    "clippy.toml",
    "docs/",
    "fpga",
    "rust-toolchain.toml",
    "tests/*.nes",
    "tests/roms/",
]

[package.metadata.docs.rs]
features = ["ffi", "save_states", "rewind"]

[features]
default = ["std"]
std = []
save_states = []
retroarch = []
rewind = []
ffi = []

[lib]
name = "nes"
crate-type = ["lib", "cdylib", "staticlib"]

[[example]]
name = "main"
path = "examples/main.rs"

[[example]]
name = "window"
path = "examples/window.rs"

[[example]]
name = "netplay"
path = "examples/netplay.rs"

[[example]]
name = "dual"
path = "examples/dual.rs"

[dev-dependencies]
softbuffer = "0.4.8"
winit = "0.30.13"
ureq = "3.3.0"
cpal = "0.18.1"
ringbuf = "0.5.0"
gilrs = "0.10.3"

[profile.dev]
panic = "abort"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
panic          = "abort"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
